# multi_robot_management

turtlebot3_fleet_manager/: CMakeLists.txt  README.txt  package.xml
turtlebot3_fleet_manager/html/: index.html  instructions.txt  styles.css
turtlebot3_fleet_manager/html/javascript/: RRmanager.js  server.js  taskmaster.js  workspace provider.js
turtlebot3_fleet_manager/html/javascript/bashfiles/: newrobot.sh  onrobotstartup.sh  startup.sh
turtlebot3_fleet_manager/html/javascript/scripts/: RR manager.js  client.js  point.js  rectangle.js  room.js  subtask.js  task.js  taskmaster.js  web.js  workspace provider.js
turtlebot3_fleet_manager/html/map/: officeMap.yaml
turtlebot3_fleet_manager/launch/: amcl_custom.launch  move_base_custom.launch  turtlebot3_navigation_custom.launch
